# rsplotlib

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  RELEASE_NOTES.md  RELEASE_NOTES_zh.md  analyze_svg.py  build_wheel.sh  compare_images.py  compare_plots.py  compare_svg.py  main.py  plots.py  pyproject.toml  readme.md  text_utils  tutorial.css  tutorial.html  tutorial.js
.github/: release.yml
.github/workflows/: ci.yml  release.yml  rust.yml
ci/: smoke_test.py
examples/: test_svg.rs
python/rsplot/: __init__.py  api.py  examples.py  gridspec.py  pylab.py  pyplot.py  style.py  ticker.py
python/rsplotlib/: __init__.py  _figure_defaults.py  _font_resolver.py  _rcparams.py  api.py  cm.py  collections.py  colors.py  dates.py  examples.py  gridspec.py  patches.py  path.py  pylab.py  pyplot.py  style.py  text.py  ticker.py
python/rsplotlib/core/: __init__.py  api.py
python/rsplotlib/figure/: __init__.py  _defaults.py
python/rsplotlib/layout/: __init__.py  gridspec.py
python/rsplotlib/ticks/: __init__.py  ticker.py
python/rsplotlib/utils/: __init__.py  _font_resolver.py  _rcparams.py  style.py
src/: axes.rs  axes_bounds.rs  axes_grid.rs  axes_legend.rs  axes_mesh.rs  axes_render_elements.rs  axes_title.rs  axis.rs  colormap.rs  colors.rs  elements.rs  figure.rs  gridspec.rs  lib.rs  marker.rs  pyfuncs.rs  text_utils.rs  ticker.rs
src/core/: colormap.rs  colors.rs  elements.rs  marker.rs  mod.rs  text_utils.rs
src/figure/: axes.rs  axes_bounds.rs  axes_colorbar.rs  axes_grid.rs  axes_legend.rs  axes_mesh.rs  axes_render_elements.rs  axes_secondary.rs  axes_table.rs  axes_title.rs  axis.rs  figure.rs  mod.rs
src/layout/: gridspec.rs  mod.rs
src/ticks/: ticker.rs
src/utils/: font_resolver.rs  font_stack.rs  glyph_cache.rs  mathtext.rs  mod.rs  pyfuncs.rs  rgb_backend.rs  style.rs
test/test_rf/: _font_probe.py  debug_circuit.py  debug_test.py  test.py  test1.py  test_suptitle_follow.py  test_suptitle_pad_fix.py  test_suptitle_simple.py
test/test_rf/networkx/: conftest.py  convert.py  convert_matrix.py  lazy_imports.py
test/test_rf/networkx/algorithms/: __init__.py  cluster.py  cycles.py  distance_measures.py  hybrid.py  matching.py  node_classification.py  planarity.py  polynomials.py  similarity.py  simple_paths.py  smallworld.py  structuralholes.py  threshold.py
test/test_rf/networkx/classes/: digraph.py  graph.py  multidigraph.py  multigraph.py  reportviews.py
test/test_rf/networkx/drawing/: layout.py  nx_pylab.py
test/test_rf/networkx/generators/: __init__.py  degree_seq.py  expanders.py  line.py  nonisomorphic_trees.py  random_graphs.py  spectral_graph_forge.py  time_series.py
test/test_rf/networkx/linalg/: algebraicconnectivity.py  attrmatrix.py  laplacianmatrix.py  modularitymatrix.py
test/test_rf/networkx/readwrite/: gexf.py  graphml.py  pajek.py  text.py
test/test_rf/networkx/tests/: test_convert_numpy.py  test_convert_scipy.py  test_lazy_imports.py
test/test_rf/networkx/utils/: __init__.py  backends.py  decorators.py  mapped_queue.py  misc.py  random_sequence.py  rcm.py  union_find.py
test/test_rf/scipy/: __config__.py  __init__.py  conftest.py
test/test_rf/scipy/_lib/: _array_api.py  _array_api_docs_tables.py  _array_api_override.py  _disjoint_set.py  _docscrape.py  _elementwise_iterative_method.py  _sparse.py  _testutils.py  _util.py  deprecation.py
test/test_rf/scipy/constants/: __init__.py  _codata.py  _constants.py
test/test_rf/scipy/datasets/: _registry.py
test/test_rf/scipy/differentiate/: _differentiate.py
test/test_rf/scipy/fft/: _basic_backend.py  _debug_backends.py  _fftlog.py  _fftlog_backend.py  _helper.py  _realtransforms.py  _realtransforms_backend.py
test/test_rf/scipy/fftpack/: __init__.py  _basic.py  _pseudo_diffs.py  _realtransforms.py
test/test_rf/scipy/integrate/: __init__.py  _bvp.py  _cubature.py  _lebedev.py  _ode.py  _odepack_py.py  _quad_vec.py  _quadpack_py.py  _quadrature.py  _tanhsinh.py
test/test_rf/scipy/interpolate/: __init__.py  _bary_rational.py  _bsplines.py  _cubic.py  _fitpack2.py  _fitpack_impl.py  _fitpack_py.py  _fitpack_repro.py  _interpolate.py  _ndbspline.py  _ndgriddata.py  _pade.py  _polyint.py  _rbf.py  _rbfinterp.py  _rbfinterp_np.py  _rbfinterp_xp.py  _regrid.py  _rgi.py
test/test_rf/scipy/io/: __init__.py  _fortran.py  _idl.py  _mmio.py  _netcdf.py  wavfile.py
test/test_rf/scipy/linalg/: __init__.py  _basic.py  _decomp.py  _decomp_cholesky.py  _decomp_cossin.py  _decomp_ldl.py  _decomp_polar.py  _decomp_qr.py  _decomp_qz.py  _decomp_schur.py  _decomp_svd.py  _expm_frechet.py  _matfuncs.py  _matfuncs_inv_ssq.py  _matfuncs_sqrtm.py  _misc.py  _sketches.py  _solvers.py  _special_matrices.py  blas.py  interpolative.py  lapack.py
test/test_rf/scipy/ndimage/: _delegators.py  _filters.py  _interpolation.py  _measurements.py  _morphology.py  _ni_support.py  _support_alternative_backends.py
test/test_rf/scipy/odr/: __init__.py  _add_newdocs.py  _models.py  _odrpack.py
test/test_rf/scipy/optimize/: __init__.py  _basinhopping.py  _bracket.py  _chandrupatla.py  _cobyla_py.py  _cobyqa_py.py  _constraints.py  _differentiable_functions.py  _differentialevolution.py  _direct_py.py  _dual_annealing.py  _elementwise.py  _hessian_update_strategy.py  _lbfgsb_py.py  _linesearch.py  _linprog.py  _linprog_doc.py  _linprog_highs.py  _linprog_ip.py  _minimize.py  (+20 more)
test/test_rf/skrf/: __init__.py  circuit.py  constants.py  frequency.py  mathFunctions.py  network.py  networkSet.py  plotting.py  qfactor.py  taper.py  time.py  tlineFunctions.py  util.py  vectorFitting.py
test/test_rf/test_rf/: test.py  test_minimize.py  test_suptitle_final.py  test_suptitle_position.py
wheelhouse/: rsplotlib-0.1.3-cp313-cp313-macosx_11_0_arm64.whl
(+542 files in other folders)
