[package]
name = "rsplotlib"
version = "0.2.8"
edition = "2024"

[lib]
name = "rsplotlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "ab_glyph", "line_series", "point_series"] }
png = "0.18.1"
owned_ttf_parser = "0.25.1"
jpeg-encoder = "0.7.0"
jpeg-decoder = "0.3.2"
# 与 plotters 0.3.7 相同版本的 ab_glyph / plotters-backend（均已在 Cargo.lock 锁定，
# 不引入新下载）：glyph 缓存需直接引用 ab_glyph 光栅化器与后端 trait 类型。
ab_glyph = "0.2.32"
plotters-backend = "0.3.7"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"