[package]
name = "rsplotlib"
version = "0.3.2"
edition = "2024"

[lib]
name = "rsplotlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "ab_glyph", "line_series", "point_series"] }
png = "0.18.1"
owned_ttf_parser = "0.25.1"
jpeg-encoder = "0.7.0"
jpeg-decoder = "0.3.2"
# 与 plotters 0.3.7 相同版本的 ab_glyph / plotters-backend（均已在 Cargo.lock 锁定，
# 不引入新下载）：glyph 缓存需直接引用 ab_glyph 光栅化器与后端 trait 类型。
ab_glyph = "0.2.32"
plotters-backend = "0.3.7"

[profile.release]
opt-level = 2          # 通常 opt-level=2 已经足够，3 可能带来边际收益而时间翻倍
lto = "thin"           # 用 ThinLTO 代替 fat LTO，编译速度和内存占用大幅改善，性能损失极小
codegen-units = 16     # ThinLTO 允许并行，设置合理数量（如 CPU 核心数）
strip = true           # 或 "symbols"，效果相同

[profile.dev]
opt-level = 0
debug = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"