[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "rsplotlib"
version = "0.1.4"
description = "A high-performance matplotlib-compatible plotting library powered by Rust"
readme = "README_zh.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "rsplotlib contributors" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "xlrd>=2.0.2",
]

[tool.maturin]
python-source = "python"
