[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "rsplotlib"
version = "0.2.3"
description = "A high-performance matplotlib-compatible plotting library powered by Rust"
readme = "README_zh.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "YJ-Niu" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["plotting", "matplotlib", "visualization", "rust", "scientific"]

[tool.maturin]
python-source = "python"
